# Bearmony

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
bearmony/: __main__.py  audio.py
bearmony/assets/: LICENSE_SOUNDFONT.txt
bearmony/assets/images/: logo.icns
bearmony/data/: chord_formulas.json  progressions.json  scales.json
bearmony/gui/: desktop.py
scripts/: fetch_soundfont.py
tests/: test_audio.py
